# sbtb

./: .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: openapi-generate-check.yml  test_client.yml  test_server.yml
clients/: .gitignore  CLAUDE.md  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
clients/apps/web/: .env.example  README.md  middleware.ts  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
clients/apps/web/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
clients/apps/web/src/app/(app)/: layout.tsx
clients/apps/web/src/app/(auth)/: layout.tsx
clients/apps/web/src/components/: header.tsx
clients/apps/web/src/components/auth/: forgot-password-form.tsx  google-oauth-button.tsx  login-error-toast.tsx  login-form.test.tsx  login-form.tsx  magic-link-button.test.tsx  reset-password-form.test.tsx  reset-password-form.tsx  signup-form.tsx  (+2 more)
clients/apps/web/src/hooks/: use-current-user.test.ts  use-current-user.ts  use-featured-fighters.ts  use-toggle-bookmark.test.ts  use-toggle-bookmark.ts  use-user.ts
clients/apps/web/src/providers/: auth-listener.tsx  query-provider.tsx
clients/apps/web/src/store/: carousel.test.ts  carousel.ts  modal.ts
clients/apps/web/src/test-utils/: query-wrapper.tsx  router.ts  supabase.ts
clients/apps/web/src/types/: fighter.ts
sbtb/: main.py  routes.py
sbtb/core/: config.py  http_requests.py
sbtb/database/: session.py
sbtb/database/migrations/: env.py
sbtb/database/migrations/versions/: 128fa20597b8_eager_load_fighters_fight_cards.py  613bf616bced_initial_migration.py  74487e240e76_change_rank_type_from_int_to_double.py  955ba92d5011_remove_fight_card_id_from_fighters_table.py  ad80a774081b_add_fight_card_table.py  b6b2c6c4e8f2_add_rank_table.py  c456bf837b23_remove_association_tables_between_.py  d6d7f88fd803_added_fight_card_fighters_association_.py  e4b921984471_fix_fighter_organization_association.py  e86f7d01ab66_change_fightcard_column_name_.py  f24751cf8cc1_create_user_table.py
sbtb/fighter/: dependencies.py  domain.py  driver.py  models.py  repository.py  routes.py  schemas.py  scraper.py  service.py
sbtb/user/: models.py
server/: .env.example  .pre-commit-config.yaml  CLAUDE.md  README.md  alembic.ini  pyproject.toml
server/migrations/: env.py
server/migrations/versions/: 2026_05_17_1233-0dc521d6835a_initial_migration.py  2026_05_17_2146-6905bc7723a1_seed_reference_data.py  2026_05_17_2146-c435cee8315e_initial_schema.py  2026_05_18_0000-f3a8d2c1b4e9_add_users_table.py  2026_05_20_0000-b7c4e5f6a2d1_add_fighter_avatar_url.py  2026_06_15_2101-7424d053a53f_add_featured_fighters_table.py
server/sbtb/: app.py  main.py  routes.py
server/sbtb/auth/: dependencies.py  jwt.py  permissions.py
server/sbtb/core/: config.py  exceptions.py  http_requests.py  logging.py  schemas.py  util.py
server/sbtb/core/database/: base.py  session.py
server/sbtb/core/integrations/: supabase.py
server/sbtb/core/repository/: base.py
server/sbtb/fighter/: dependencies.py  domain.py  driver.py  image_generator.py  models.py  repository.py  routes.py  schemas.py  scraper.py  service.py
server/sbtb/fighter/avatar_generators/: __init__.py  gemini.py  openai.py
server/sbtb/fighter/scraper/: __init__.py  base.py  boxers.py  boxing_fight_cards.py
server/sbtb/lambdas/: generate_boxer_images.py
server/sbtb/models/: __init__.py  bout.py  featured_fighter.py  fight_card.py  fight_organization.py  fighter.py  rank.py  user.py  weight_class.py
server/sbtb/user/: models.py  repository.py  routes.py  schemas.py  service.py
server/scripts/: generate_openapi.py
server/tests/: conftest.py
server/tests/auth/: test_dependencies.py  test_jwt.py
server/tests/factories/: __init__.py  fighter.py  jwt.py  user.py
server/tests/fighter/: test_routes.py  test_service.py
server/tests/fixtures/: __init__.py  auth.py  base.py  database.py  jwt_keys.py
server/tests/user/: test_routes.py
(+46 files in other folders)
