[project]
name = "sbtb"
version = "0.1.0"
description = "Saved By The Bell - A simple web application for notifying users about upcoming fights"
authors = [
    { name = "mark", email = "markkimjr96@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "requests (>=2.32.3,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "fastapi-users (>=14.0.1,<15.0.0)",
    "colorlog (>=6.9.0,<7.0.0)",
    "aiohttp (>=3.11.14,<4.0.0)",
    "selenium (>=4.31.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "fastapi-users-db-sqlalchemy (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
