[project]
name = "sbtb"
version = "0.1.0"
description = "Saved By The Bell - Boxing fight notification service"
authors = [
    { name = "mark", email = "markkimjr96@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "uvicorn>=0.34.0",
    "sqlalchemy>=2.0.39",
    "pydantic-settings>=2.8.1",
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.6",
    "aiosqlite>=0.21.0",
    "requests>=2.32.3",
    "bs4>=0.0.2",
    "beautifulsoup4>=4.13.3",
    "lxml>=5.3.1",
    "fastapi-users>=14.0.1",
    "colorlog>=6.9.0",
    "aiohttp>=3.11.14",
    "selenium>=4.31.0",
    "webdriver-manager>=4.0.2",
    "pytz>=2025.2",
    "fastapi-users-db-sqlalchemy>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sbtb"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
