[project]
name = "sbtb"
version = "0.1.0"
description = "Saved By The Bell - Boxing fight notification service"
authors = [
    { name = "mark", email = "markkimjr96@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "uvicorn>=0.34.0",
    "sqlalchemy>=2.0.39",
    "pydantic-settings>=2.8.1",
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.6",
    "aiosqlite>=0.21.0",
    "bs4>=0.0.2",
    "beautifulsoup4>=4.13.3",
    "lxml>=5.3.1",
    "structlog>=24.0.0",
    "asgi-correlation-id>=4.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "rich>=13.0.0",
    "aiohttp>=3.11.14",
    "pytz>=2025.2",
    "greenlet>=3.5.0",
    "pyjwt[cryptography]>=2.8.0",
    "replicate>=1.0.0",
    "supabase>=2.0.0",
    "Pillow>=11.0.0",
    "openai>=1.50.0",
    "google-genai>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sbtb"]

[tool.ruff]
line-length = 120
exclude = ["migrations/"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.13",
]
